--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,43 @@
-# Ignore other data science projects folders
-Bank\ Suscription/
-Deep\ Convolutional\ Classificator\ Fashion\ MNIST/
-Galaxy\ Zoo/
-Wine\ Quality\ Dataset/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# pyenv
+.python-version
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
